[package]
name = "abstract_chearmyp_token"
version = "0.3.0-dev"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"

[dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.1.2"

[dev-dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.1.2"
features = ["range_boundary", "vec_boundary_collection"]

[features]
default = []
no_std = ["abstract_chearmyp_boundary/no_std"]
vecdeque_token_queue = []
assertable_token_kind = []
